# SimpleSequencer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Main.cpp  MainComponent.cpp  MainComponent.h
src/components/: BeatButton.cpp  BeatButton.h  BeatMarker.cpp  BeatMarker.h  Sequencer.cpp  Sequencer.h  SoundLine.cpp  SoundLine.h
src/engine/: SequenceTimer.cpp  SequenceTimer.h  SoundEngine.cpp  SoundEngine.h
src/types/: AudioTypes.h
test/engine/: SoundEngineTest.cpp
